--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,4 +1,9 @@
 {
   "deno.enable": true,
-  "deno.enablePaths": ["./app"]
+  "deno.enablePaths": [
+    "./app"
+  ],
+  "cSpell.words": [
+    "bangumi"
+  ]
 }
