--- a/app/.env.dev
+++ b/app/.env.dev
@@ -2,7 +2,9 @@ ENTRYPOINT_URL=https://bgm-test.deno.dev/
 
 PORT=8000
 
-BGM_APP_ID=
-BGM_APP_SECRET=
+BGM_APP_ID= # TODO
+BGM_APP_SECRET= # TODO
+
+USER_AGENT= # TODO
 
 BGM_HOMEPAGE_URL=https://bangumi.tv/
