--- a/app/deno.json
+++ b/app/deno.json
@@ -8,7 +8,7 @@
     "entrypoint": "main.ts"
   },
   "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "https://esm.sh/react@18.3.1"
+    "jsx": "precompile",
+    "jsxImportSource": "npm:hono/jsx"
   }
 }
