--- a/gadget/.env
+++ b/gadget/.env
@@ -1,1 +1,2 @@
-VITE_APP_ENTRYPOINT_URL=https://bgm-ep-ratings.deno.dev/
+VITE_APP_AUTH_ENTRYPOINT_URL=https://bgm-ep-ratings.deno.dev/auth/
+VITE_APP_API_ENTRYPOINT_URL=https://bgm-ep-ratings.deno.dev/api/
