fix(app): 修复由于没有提供某些环境变量而导致测试跑不了的问题

--- a/app/.env.test
+++ b/app/.env.test
@@ -8,3 +8,8 @@ BGM_APP_SECRET=TEST_APP_SECRET
 USER_AGENT="Test User Agent"
 
 BGM_HOMEPAGE_URL=https://bangumi.tv/
+
+# 随便生成的，不要真拿去用。
+JWT_SIGNING_KEY_JWK='{"kty":"EC","crv":"P-256","alg":"ES256","x":"nDVrvLMm-HHhamMW8Z2uKpmzJCyPu-__cmWaIdxE8Dk","y":"Dgj-1dRr2mXRBsQbPHm4CsaG0pSL7IWuljsg75X7QuE","d":"SA1DDjvZp_S6_u9_swm6FkqYrZfYH_X4ECYiAUhdgB4","key_ops":["sign"],"ext":true}'
+# 同上。
+JWT_VERIFYING_KEY_JWK='{"kty":"EC","crv":"P-256","alg":"ES256","x":"nDVrvLMm-HHhamMW8Z2uKpmzJCyPu-__cmWaIdxE8Dk","y":"Dgj-1dRr2mXRBsQbPHm4CsaG0pSL7IWuljsg75X7QuE","key_ops":["verify"],"ext":true}'
