--- a/app/deno.json
+++ b/app/deno.json
@@ -10,5 +10,6 @@
   "compilerOptions": {
     "jsx": "precompile",
     "jsxImportSource": "npm:hono/jsx"
-  }
+  },
+  "importMap": "import_map.json"
 }
