--- a/app/justfile
+++ b/app/justfile
@@ -1,2 +1,5 @@
 test *args:
 	deno test --allow-env --env=.env.test --unstable-kv {{args}}
+
+deploy * args:
+	deployctl deploy --prod --import-map=import_map.json {{args}}
