feat(app): 支持切换 auth 和 app routes 的模式
auth route 的模式：
- `["normal"]`: 与先前无变化；
- `["off"]`: 将不挂载 `/auth/*`。

app route 的模式：
- `["normal"]`: 与先前无变化；
- `["maintenance", …]`: 当访问 `/api/*` 时，将返回表示正在维护的错误；
- `["forward", …]`: 当访问 `/api/*` 时，将会将请求转发至其他指定的地方。

--- a/app/.env.dev
+++ b/app/.env.dev
@@ -1,4 +1,8 @@
-ENTRYPOINT_URL=https://bgm-ep-ratings.deno.dev/
+# 目前在测试 forward。
+AUTH_ROUTE_MODE='["off"]'
+API_ROUTE_MODE='["forward", "https://bgm-ep-ratings.deno.dev/api/"]'
+
+ENTRYPOINT_URL=https://bgm-ep-ratings-dev.deno.dev/
 
 PORT=8000
 
@@ -8,3 +12,6 @@ BGM_APP_SECRET= # TODO
 USER_AGENT= # TODO
 
 BGM_HOMEPAGE_URL=https://bangumi.tv/
+
+JWT_SIGNING_KEY_JWK= # TODO
+JWT_VERIFYING_KEY_JWK= # TODO
