--- a/app/.env.test
+++ b/app/.env.test
@@ -1,4 +1,7 @@
-ENTRYPOINT_URL=https://bgm-ep-ratings.deno.dev/
+AUTH_ROUTE_MODE='["normal"]'
+API_ROUTE_MODE='["normal"]'
+
+ENTRYPOINT_URL= # TODO
 
 PORT=8000
 
