fix(app): 修复由于没有提供某个环境变量而导致测试跑不了的问题

--- a/app/.env.test
+++ b/app/.env.test
@@ -1,7 +1,7 @@
 AUTH_ROUTE_MODE='["normal"]'
 API_ROUTE_MODE='["normal"]'
 
-ENTRYPOINT_URL= # TODO
+ENTRYPOINT_URL=https://example.com # TODO
 
 PORT=8000
 
