--- a/app/tools/docker-compose/docker-compose.yml
+++ b/app/tools/docker-compose/docker-compose.yml
@@ -8,6 +8,7 @@ services:
     volumes:
       - data:/data
     environment:
+      LOG_FILE_PATH: /data/logs/app.log
       KV_PATH: /data/kv.s3db
       AUTH_ROUTE_MODE: '["off"]'
       API_ROUTE_MODE: '["normal"]'
