--- a/app/justfile
+++ b/app/justfile
@@ -5,7 +5,10 @@ deploy * args:
 	deployctl deploy --prod --import-map=import_map.json {{args}}
 
 docker-build:
-	docker build -t umajho/bangumi-episode-ratings .
+	docker build \
+		-t umajho/bangumi-episode-ratings:latest \
+		-t umajho/bangumi-episode-ratings:$(cat deno.json | jq -r .version) \
+		.
 
 docker-push:
-	docker image push umajho/bangumi-episode-ratings:latest
+	docker image push --all-tags umajho/bangumi-episode-ratings
