--- a/gadget/.env
+++ b/gadget/.env
@@ -1,3 +1,5 @@
 APP_AUTH_ENTRYPOINT_URL=https://bgm-ep-ratings.deno.dev/auth/
 # https://单集评分.bgm.zone/api/
 APP_API_ENTRYPOINT_URL=https://xn--kbrs5al25jbhj.bgm.zone/api/
+
+GADGET_PAGE_PATH=/dev/app/3263
