build(app): 利用 deno 2.0 的新特性，调整构建 docker image 的策略

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,14 @@
-FROM denoland/deno:alpine-1.46.2
+FROM denoland/deno:alpine-2.0.0
 
 EXPOSE 80
 
 WORKDIR /app
 
-COPY deno.json deno.lock import_map.json main.ts /app/
+COPY deno.json deno.lock import_map.json /app/
+
+RUN deno install
+
+COPY main.ts /app/
 COPY ./src /app/src
 
 RUN deno cache main.ts
