--- a/app/justfile
+++ b/app/justfile
@@ -13,5 +13,6 @@ docker-build:
 docker-build-tmp:
 	docker build -t umajho/bangumi-episode-ratings:tmp .
 
-docker-push:
-	docker image push --all-tags umajho/bangumi-episode-ratings
+docker-push-latest:
+	docker image push umajho/bangumi-episode-ratings:$(cat deno.json | jq -r .version)
+	docker image push umajho/bangumi-episode-ratings:latest
