--- a/gadget/package.json
+++ b/gadget/package.json
@@ -12,7 +12,7 @@
   "devDependencies": {
     "@types/jquery": "^3.5.30",
     "@types/node": "^22.5.0",
-    "rolldown": "^0.13.2",
+    "rolldown": "^1.0.0-beta.31",
     "rollup-plugin-dotenv": "^0.5.1",
     "rollup-plugin-userscript-metablock": "^0.4.2",
     "typescript": "^5.5.3"
