refactor(app): 移除不再需要的代码；更新 docker 相关配置；修复 debug 的使用
移除不再需要的代码：在删除了用户脚本形式的 gadget 后，只剩超合金组件形式的
gadget，因此运行的 gadget 必定是最新版本，兼容旧版的代码就可以去掉了。

更新 docker 相关配置：让 tools/docker-compose 能重新正常运作。另外，听闻 alpine
性能不行，换用 debian。

修复 debug 的使用：指 `bgm_ep_ratings_debug_api_entrypoint_url`，且仅限于
Chrome。不知什么时候，Chrome 开始要求向 localhost 请求的 OPTIONS 响应包含头
`Access-Control-Allow-Private-Network: true` 才视为符合 CORS。至于 Firefox 和
Safari，以前就不支持请求 localhost，现在当然还是不支持。

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,10 +1,10 @@
-FROM denoland/deno:alpine-2.0.0
+FROM denoland/deno:debian-2.5.0
 
 EXPOSE 80
 
 WORKDIR /app
 
-COPY deno.json deno.lock import_map.json /app/
+COPY deno.json deno.lock /app/
 
 RUN deno install
 
