--- a/app/tools/docker-compose/docker-compose.yml
+++ b/app/tools/docker-compose/docker-compose.yml
@@ -9,6 +9,7 @@ services:
     volumes:
       - data:/data
     environment:
+      DEV: 1
       LOG_FILE_PATH: /data/logs/app.log
       KV_PATH: /data/kv.s3db
       AUTH_ROUTE_MODE: '["off"]'
@@ -19,13 +20,13 @@ services:
       BGM_APP_SECRET: _
       USER_AGENT_FILE: /run/secrets/USER_AGENT
       BGM_HOMEPAGE_URL: https://bangumi.tv/
-      JWT_SIGNING_KEY_JWK_FILE: /run/secrets/JWT_SIGNING_KEY_JWK
+      # JWT_SIGNING_KEY_JWK_FILE: /run/secrets/JWT_SIGNING_KEY_JWK
       JWT_VERIFYING_KEY_JWK_FILE: /run/secrets/JWT_VERIFYING_KEY_JWK
     secrets:
       - USER_AGENT
-      - JWT_SIGNING_KEY_JWK
+      # - JWT_SIGNING_KEY_JWK
       - JWT_VERIFYING_KEY_JWK
-  
+
   # see: https://github.com/mattn/litestream-sidecar-example/blob/main/docker-compose.yaml
   litestream:
     image: litestream/litestream:0.3.13
@@ -50,7 +51,7 @@ volumes:
 secrets:
   USER_AGENT:
     file: ./secrets/USER_AGENT.txt
-  JWT_SIGNING_KEY_JWK:
-    file: ./secrets/JWT_SIGNING_KEY_JWK.json
+    # JWT_SIGNING_KEY_JWK:
+    #   file: ./secrets/JWT_SIGNING_KEY_JWK.json
   JWT_VERIFYING_KEY_JWK:
     file: ./secrets/JWT_VERIFYING_KEY_JWK.json
